--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="feedback-form">
                     <h2>Get in touch</h2>
 
-                    <form id="contactForm" action="sendmail.php" method="POST">
+                    <form id="contactForm" action="./sendmail.php" method="POST">
                         <div class="form-group">
                             <label for="InputName">Name</label>
                             <input type="text" name="name" required="" class="form-control" id="InputName"
