--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                       placeholder="Write message"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <input type="submit" class="btn btn-primary">Submit</input>
                     </form>
                 </div>
                 <!-- .feedback-form -->
