--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <small>July 2017</small>
                     <h3>Team Leader(Virtual Internship)</h3>
                     <h4>Laugh Out Loud Ventures</h4>
-                    <p><a href="./kashish bansal.pdf">Certificate</a></p>
+                    <p><a href="./kashishintern.pdf">Certificate</a></p>
                     <p>Navi Mumbai, India</p>
                 </div>
                 <!-- .experience-item -->
@@ -318,7 +318,7 @@
                 <div class="content-item">
                     <h3>Buy and Sell</h3>
 
-                    <p>Implementation of above project using HTML,CSS,JS and PHP.
+                    <p>Implementation of above project using HTML,CSS,JS and PHP.<br/>
                         <a href="https://buysellkb.000webhostapp.com/">Project Link</a></p>
 
                 </div>
@@ -333,14 +333,14 @@
                     <h3>Website for Saga India</h3>
 
                     <p>Made a front end website for Saga India, Yamunanagar along with a
-                        companion and hosted it on firebase for purpose of publicity.
+                        companion and hosted it on firebase for purpose of publicity.<br/>
                         <a href="www.sagaindia.co.in">Project Link</a> </p>
                 </div>
                 <div class="content-item">
                     <h3>Website for Alliance Group</h3>
 
                     <p>Made a front end website for Alliance Group, a blockchain agency
-                        startup and hosted it on firebase for purpose of publicity.
+                        startup and hosted it on firebase for purpose of publicity.<br/>
                         <a href="www.alliancegroup.vc">Project Link</a> </p>
                 </div>
                 
