--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2008-2016</small>
+                    <small>2008-2014</small>
                     <h3>Class X</h3>
                     <h4>Delhi Public School, Yamunanagar</h4>
 
@@ -335,14 +335,14 @@
 
                     <p>Made a front end website for Saga India, Yamunanagar along with a
                         companion and hosted it on firebase for purpose of publicity.<br/>
-                        <a href="www.sagaindia.co.in">Project Link</a> </p>
+                        <a href="https://www.sagaindia.co.in/">Project Link</a> </p>
                 </div>
                 <div class="content-item">
                     <h3>Website for Alliance Group</h3>
 
                     <p>Made a front end website for Alliance Group, a blockchain agency
                         startup and hosted it on firebase for purpose of publicity.<br/>
-                        <a href="www.alliancegroup.vc">Project Link</a> </p>
+                        <a href="https://www.alliancegroup.vc/">Project Link</a> </p>
                 </div>
                 
             </div>
