--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
                     <p>Made a front end website for Saga India, Yamunanagar along with a
                         companion and hosted it on firebase for purpose of publicity.<br/>
-                        <a href="https://www.sagaindia.co.in/">Project Link</a> </p>
+                        <a href="https://sagaindia.co.in/">Project Link</a> </p>
                 </div>
                 <div class="content-item">
                     <h3>Website for Alliance Group</h3>
