--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="about-text">
                 <p>
-                    Inquisitive, energetic computer science specialist skilled in leadership, with a strong foundation in math, logic, and competitive coding. Always curious to learn new things and implement them.
+                    Inquisitive, energetic computer science student skilled in leadership, with a strong foundation in math, logic, and competitive coding. Always curious to learn new things and implement them.
                 </p>
 
                 <a href="./cv.pdf"><p>View The Full Resume</p></a>
