--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h3>Electronics</h3>
 
                     <p>
-                        Know about Arduino and Simulations.
+                        Knowledge about Arduino and Simulations.
                     </p>
                 </div>
             </div>
