--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet">
 
-
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script>
+        window.sr = ScrollReveal({reset:true});
+        sr.reveal('.Reveal',{duration:2000});
+      </script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar">
 <div id="main-wrapper">
@@ -71,7 +75,7 @@
 <div class="right-col-block blocks">
 <div class="theiaStickySidebar">
 <section class="expertise-wrapper section-wrapper gray-bg" id ="top">
-    <div class="container-fluid">
+    <div class="container-fluid Reveal">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
@@ -129,9 +133,9 @@
 </section>
 <!-- .expertise-wrapper -->
 
-<section class="section-wrapper skills-wrapper">
+<section class="section-wrapper skills-wrapper RContainer">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="section-title">
                     <h2>Skills</h2>
@@ -139,7 +143,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="progress-wrapper">
 
@@ -214,15 +218,15 @@
 </section>
 <!-- .skills-wrapper -->
 
-<section class="section-wrapper section-experience gray-bg">
+<section class="section-wrapper section-experience gray-bg RContainer">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="section-title"><h2>Work Experience</h2></div>
             </div>
         </div>
         <!--.row-->
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="content-item">
                     <small>July 2017</small>
@@ -250,15 +254,15 @@
 </section>
 <!-- .section-experience -->
 
-<section class="section-wrapper section-education">
+<section class="section-wrapper section-education RContainer">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="section-title"><h2>Education</h2></div>
             </div>
         </div>
         <!--.row-->
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 
                 <!-- .experience-item -->
@@ -298,7 +302,7 @@
 
 <section class="section-wrapper section-interest gray-bg">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="section-title">
                     <h2>Projects</h2>
@@ -307,7 +311,7 @@
         </div>
         <!-- .row -->
 
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="content-item">
                     <h3>PL/SQL Project</h3>
@@ -355,7 +359,7 @@
 
 <section class="section-wrapper portfolio-section">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="section-title">
                     <h2>Achievements</h2>
@@ -363,7 +367,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row Reveal">
             <div class="col-md-12">
                 <div class="content-item">
 
@@ -394,7 +398,7 @@
 </section>
 <!-- .portfolio -->
 
-<section class="section-contact section-wrapper gray-bg">
+<section class="section-contact section-wrapper gray-bg Reveal">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -500,5 +504,13 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/theia-sticky-sidebar.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
+<script src="js/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
+
+<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+<script>
+    window.sr = ScrollReveal();
+    sr.reveal('.Reveal');
+  </script>
 </body>
 </html>
