--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                        <span class="progress-title">Communtcation Skills</span>
+                        <span class="progress-title">Communication Skills</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
