--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <h3>Web development</h3>
 
                     <p>
-                        Using HTML, CSS, JS, php, MySql and some frameworks in javascript.
+                        Using HTML, CSS, JS, php, MySql, ReactJS etc.
                     </p>
                 </div>
             </div>
@@ -279,13 +279,16 @@
                         <a href="https://sagaindia.co.in/">Project Link</a> </p>
                 </div>
                 <div class="content-item">
-                    <h3>Website for Alliance Group</h3>
+                    <h3>Website for Encrypted Ventures</h3>
 
-                    <p>Made a front end website for Alliance Group, a blockchain agency
-                        startup and hosted it on firebase for purpose of publicity.<br/>
-                        <a href="https://www.alliancegroup.vc/">Project Link</a> </p>
+                    <p>Made a front end website for Encrypted Ventures, a blockchain agency startup and hosted it on heroku for purpose of publicity. Also used fireside.fm to host podcasts on the website.<br/>
+                        <a href="http://kb-react.herokuapp.com//">Project Link</a> </p>
                 </div>
-                
+                <div class="content-item">
+                    <h3>Elective Allotment Algorithm</h3>
+
+                    <p>Made an algorithm in team of 4 people using Gale-Shapley algorithm for the allotment of electives to students.<br/>
+                </div>
             </div>
         </div>
         <!-- .row -->
