--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <h3>Website for Encrypted Ventures</h3>
 
                     <p>Made a front end website for Encrypted Ventures, a blockchain agency startup and hosted it on heroku for purpose of publicity. Also used fireside.fm to host podcasts on the website.<br/>
-                        <a href="http://kb-react.herokuapp.com//">Project Link</a> </p>
+                        <a href="http://kb-react.herokuapp.com/">Project Link</a> </p>
                 </div>
                 <div class="content-item">
                     <h3>Elective Allotment Algorithm</h3>
