--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Kashish Bansal</title>
 
     <!-- favicon -->
-    <link href="./img/KB (2).jpg" rel=icon>
+    <link href="./img/favicon.jpg" rel=icon>
 
     <!-- web-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
@@ -116,16 +116,16 @@
                     <p>
                         Using Adobe Photoshop and Adobe Illustrator.
                     </p>
+                    <p></p><a href="https://photos.app.goo.gl/ej9HP83dk9JivTcj6">Some posters</a></p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Electronics</h3>
-
+                    <h3>Hardware and Electronics</h3>
                     <p>
-                        Knowledge about Arduino and Simulations.
+                        Hands on experience with Raspberry pi, Arduino and Simulations.
                     </p>
                 </div>
             </div>
@@ -136,6 +136,28 @@
 
                     <p>
                         Using C, C++, java etc.
+                    </p>
+                </div>
+            </div>
+        </div>
+            <div class="row">
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Deep Learning</h3>
+
+                    <p>
+                        Preprocessing the data and applying various
+models and neural networks to analyze and predict results
+using keras and tensorflow.
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Other Skills</h3>
+
+                    <p>
+                        Linux, Git, LaTeX
                     </p>
                 </div>
             </div>
@@ -166,7 +188,7 @@
                     <h3>B.E.</h3>
                     <h4>Thapar Institute of Engineering and Technology, Patiala</h4>
 
-                    <p>Current CGPA-9.86</p>
+                    <p>Current CGPA-9.82</p>
                 </div>
 
                 <div class="content-item">
@@ -228,7 +250,7 @@
                     </div>
                     <div class="content-item">
                         <small>July 2017</small>
-                        <h3>Team Leader(Virtual Internship)</h3>
+                        <h3>Team Leader (Virtual Internship)</h3>
                         <h4>Laugh Out Loud Ventures</h4>
                         <p>Navi Mumbai, India</p>
                         <p><a href="./kashishintern.pdf">Certificate</a></p>
@@ -271,6 +293,24 @@
                     <p>Implementation of above project using HTML,CSS,JS and PHP.<br/>
                         <a href="https://buysellkb.000webhostapp.com/">Project Link</a></p>
 
+                </div>
+                <div class="content-item">
+                    <h3>Student Teacher Portal</h3>
+
+                    <p>Developed a project using HTML, CSS, Bootstrap,
+                        JS, PHP and MySQL which
+                        helps teachers to take attendance and students
+                        to keep track of their attendance.
+                        Also Students and teachers can view their own time
+                        table.
+                        </p>
+                        <p><a href="http://studentteacherportal.000webhostapp.com/">Project Link</a></a></p>
+                </div>
+                <div class="content-item">
+                    <h3>Cart and Pole Balancing</h3>
+
+                    <p>Trained an OpenAI gym environment (Cart and Pole) using Deep Q learning in reinforcement learning using keras and Tensorflow. 
+                        </p>
                 </div>
                 
                 <div class="content-item">
@@ -359,6 +399,42 @@
     </div>
 </section>
 <!-- .portfolio -->
+
+
+<section class="section-wrapper section-experience gray-bg RContainer">
+    <div class="container-fluid">
+        <div class="row Reveal">
+            <div class="col-md-12">
+                <div class="section-title"><h2>Certifications</h2></div>
+            </div>
+        </div>
+        <!--.row-->
+        <div class="row Reveal">
+            <div class="col-md-12">
+                <div class="content-item">
+                        <small>February 19</small>
+                        <h3>Neural Networks and Deep Learning</h3>
+                        <h4>Coursera</h4>
+                        <p><a href="https://www.coursera.org/account/accomplishments/certificate/DGN2KRLVD84G">Certificate</a></p>
+                </div>
+                <div class="content-item">
+                    <small>March 19</small>
+                    <h3>Convolutional Neural Network</h3>
+                    <h4>Coursera</h4>
+                    <p><a href="https://www.coursera.org/account/accomplishments/certificate/LUTHTQQLN789">Certificate</a></p>
+                <!-- .experience-item -->
+                
+                <!-- .experience-item -->
+            </div>
+        </div>
+        <!--.row-->
+    <!-- .container-fluid -->
+
+</section>
+
+
+
+
 <section class="section-wrapper skills-wrapper RContainer">
     <div class="container-fluid">
         <div class="row Reveal">
