--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -66,7 +66,7 @@
                     Inquisitive, energetic computer science student skilled in leadership, with a strong foundation in math, logic, and competitive coding. Always curious to learn new things and implement them.
                 </p>
 
-                <a href="https://drive.google.com/open?id=1rXzsUlxbvi6fECJl5FwUF1Q48fwxCWkB"><p>View The Full Resume</p></a>
+                <a href="https://drive.google.com/open?id=1GHCtChPSCNDLkVYarLkC_DPtJx7Gprq6"><p>View The Full Resume</p></a>
 
 
                 <!-- <p><img src="img/sign.png" alt="" class="img-responsive" scale=0.5/></p> -->
