--- a/index.html
+++ b/index.html
@@ -59,20 +59,39 @@
         </div>
         <div class="content">
             <h1>Kashish Bansal</h1>
-            <span class="lead">Computer Science Student</span>
+            <span class="lead">Computer Engineering Student</span>
 
             <div class="about-text">
                 <p>
-                    Inquisitive, energetic computer science student skilled in leadership, with a strong foundation in math, logic, and competitive coding. Always curious to learn new things and implement them.
+                    Curious, energetic computer engineering student skilled in leadership, with a strong foundation in math and logic. Deep Leaning Enthusiast and likes to solve real world problems using it. Always curious to learn new things and implement them.
                 </p>
 
-                <a href="https://drive.google.com/open?id=1Fu_H5_Md5RfzbLQ0Q_Yd22p5GRCvNeFZ"><p>View The Full Resume</p></a>
+                <a href="https://drive.google.com/open?id=1Fu_H5_Md5RfzbLQ0Q_Yd22p5GRCvNeFZ"><p style="font-weight:600">View The Full Resume</p></a>
 
 
                 <!-- <p><img src="img/sign.png" alt="" class="img-responsive" scale=0.5/></p> -->
             </div>
+            <div>
+            <address>
+                <strong>Address</strong><br>
+                1180, Huda, Sector-17<br>
+                Jagadhri,Haryana
+
+            </address>
+            <address>
+                <strong>Mobile Number</strong><br>
+                +91 7206608551
+            </address>
+
+            
 
 
+            <address>
+                <strong>Email</strong><br>
+                <a href="mailto:bansal.kashish6@gmail.com">bansal.kashish6@gmail.com</a><br/>
+                <a href="mailto:kbansal_be16@thapar.edu">kbansal_be16@thapar.edu</a>
+            </address>
+            </div>
             <ul class="social-icon">
                 <li><a href="https://kashish2909.github.io/"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/kashish-b-a0893384/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -93,7 +112,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Technology Experience</h2>
+                    <h2>Technical Skills</h2>
                 </div>
             </div>
         </div>
@@ -125,17 +144,17 @@
                 <div class="expertise-item">
                     <h3>Hardware and Electronics</h3>
                     <p>
-                        Hands on experience with Raspberry pi, Arduino and Simulations.
+                        Raspberry pi, Arduino, ARM, Verilog
                     </p>
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Competitive Coding</h3>
+                    <h3>Programming Languages</h3>
 
                     <p>
-                        Using C, C++, java etc.
+                        C, C++, Java, Python, Matlab
                     </p>
                 </div>
             </div>
@@ -147,8 +166,7 @@
 
                     <p>
                         Preprocessing the data and applying various
-models and neural networks to analyze and predict results
-using keras and tensorflow.
+models and neural networks using keras and tensorflow.
                     </p>
                 </div>
             </div>
@@ -157,7 +175,8 @@ using keras and tensorflow.
                     <h3>Other Skills</h3>
 
                     <p>
-                        Linux, Git, LaTeX
+                        Linux, Git, LaTeX<br/>
+                        Image processing, NLTK
                     </p>
                 </div>
             </div>
@@ -449,16 +468,6 @@ using keras and tensorflow.
             <div class="col-md-12">
                 <div class="progress-wrapper">
 
-                    <div class="progress-item">
-                        <span class="progress-title">Marketing</span>
-
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 62%"><span class="progress-percent"> 62%</span>
-                            </div>
-                        </div>
-                        <!-- .progress -->
-                    </div>
                     <!-- .skill-progress -->
 
 
@@ -491,8 +500,8 @@ using keras and tensorflow.
                         <span class="progress-title">Communication Skills</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -521,7 +530,7 @@ using keras and tensorflow.
 <!-- .skills-wrapper -->
 
 
-<section class="section-contact section-wrapper gray-bg Reveal">
+<!-- <section class="section-contact section-wrapper gray-bg Reveal">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -529,31 +538,13 @@ using keras and tensorflow.
                     <h2>Contact</h2>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--.row-->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12">
-                <address>
-                    <strong>Address</strong><br>
-                    1180, Huda, Sector-17<br>
-                    Jagadhri,Haryana
-
-                </address>
-                <address>
-                    <strong>Mobile Number</strong><br>
-                    +91 7206608551
-                </address>
-
                 
-
-
-                <address>
-                    <strong>Email</strong><br>
-                    <a href="mailto:bansal.kashish6@gmail.com">bansal.kashish6@gmail.com</a><br/>
-                    <a href="mailto:kbansal_be16@thapar.edu">kbansal_be16@thapar.edu</a>
-                </address>
             </div>
-        </div>
+        </div> -->
         <!--.row-->
         <!-- <div class="row">
             <div class="col-md-12">
