--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="left-col-block blocks">
     <header class="header theiaStickySidebar">
         <div class="profile-img">
-            <img src="img/kb (1).png" class="img-responsive" alt=""/>
+            <img src="img/kb (1).jpg" class="img-responsive" alt=""/>
         </div>
         <div class="content">
             <h1>Kashish Bansal</h1>
