--- a/index.html
+++ b/index.html
@@ -431,6 +431,12 @@ models and neural networks using keras and tensorflow.
         <div class="row Reveal">
             <div class="col-md-12">
                 <div class="content-item">
+                        <small>July 19</small>
+                        <h3>Interview Preparation in C++</h3>
+                        <h4>Coding Ninjas</h4>
+                        <p><a href="http://www.codingninjas.in/verify/ea94deec4ad836a3">Certificate</a></p>
+                </div>
+                <div class="content-item">
                         <small>February 19</small>
                         <h3>Neural Networks and Deep Learning</h3>
                         <h4>Coursera</h4>
