--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     Curious, energetic computer engineering student skilled in leadership, with a strong foundation in math and logic. Deep Leaning Enthusiast and likes to solve real world problems using it. Always curious to learn new things and implement them.
                 </p>
 
-                <a href="https://drive.google.com/open?id=1pUR-Jc0forfkX2gzBiFlUDWpuelcRxFG"><p style="font-weight:600">View The Full Resume</p></a>
+                <a href="https://drive.google.com/open?id=1QMzXHJyFCFeCA7EcZ35V9eRtFi3zRYUU"><p style="font-weight:600">View my Resumé</p></a>
 
 
                 <!-- <p><img src="img/sign.png" alt="" class="img-responsive" scale=0.5/></p> -->
